re PR c++/64514 (Error in template instantiation in GCC 4.9, works fine in GCC 4.8)

PR c++/64514
	* pt.c (coerce_template_parameter_pack): Return NULL for a
	zero-length fixed parameter pack with a pack expansion arg.

From-SVN: r220210